--- a/index.html
+++ b/index.html
@@ -1,22 +1,39 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="UTF-8" />
     <title>Preview</title>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
+    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
+    <meta http-equiv="Content-Security-Policy"
+          content="default-src 'self'; script-src 'self'">
+    <meta http-equiv="X-Content-Security-Policy"
+          content="default-src 'self'; script-src 'self'">
+    <style type="text/css">
+        body,
+        html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
+        }
+
+        #app-root {
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            top: 0;
+        }
+    </style>
+
 </head>
-
 <body>
-
     <iframe id="app-root"
-        height="100%"
-        width="100%"
-        frameborder=0
-        src="/src/app/modules/app-module/pages/index.html"
-        allow="autoplay; clipboard-write; encrypted-media; picture-in-picture"
-        allowfullscreen>
+            src="src/app/modules/app-module/pages/app-module.html"
+            height="100%"
+            width="100%"
+            frameborder=0
+            allowfullscreen>
     </iframe>
 
     <!-- You can also require other files to run in this process -->
